Add getData method to Booking

--- a/src/db/app.json
+++ b/src/db/app.json
@@ -263,5 +263,16 @@
             ]
         }
     ],
-    "booking": []
+    "booking": [
+        {
+            "id": 1,
+            "date": "2019-01-01",
+            "hour": "12:30",
+            "table": 1,
+            "repeat": false,
+            "duration": 4,
+            "ppl": 3,
+            "starters": []
+        }
+    ]
 }
