--- a/package.json
+++ b/package.json
@@ -9,31 +9,28 @@
     "init:gitignore": "curl https://raw.githubusercontent.com/github/gitignore/master/Node.gitignore -o .gitignore",
     "init:gitignore:custom": "echo \"dist\" >> .gitignore",
     "test": "npm-run-all test:*",
-    "test:html": "globstar nu-html-checker dist/*.html",
+    "test:html": "html-validate src/*.html",
     "test:js": "eslint src/js/",
-    "test:scss": "stylelint --fix src/sass/",
+    "test:scss": "stylelint src/sass/",
     "build": "npm-run-all build:* test",
-    "build:clean": "mkdirp dist && rm -r dist && mkdirp dist",
+    "build:clean": "rimraf dist && mkdirp dist",
     "build:copy": "copyfiles -a -u 1 -e \"**/sass/**/*\" -e \"**/.gitkeep\" \"src/**/*\" dist",
     "build:sass": "node-sass --output-style compact -o dist/css src/sass",
-    "build:autoprefixer": "globstar autoprefixer-cli \"dist/css/*.css\"",
+    "build:autoprefixer": "postcss dist/css/*.css --use autoprefixer -d dist/css",
     "build-dev": "npm-run-all build-dev:sass build:autoprefixer",
     "build-dev:sass": "node-sass --output-style expanded --source-map true -o dist/css src/sass",
-    "server": "json-server --port 3131 --no-cors --delay 250 --watch dist/db/app.json",
-    "watch": "npm-run-all build build-dev -p watch:* server",
-    "watch:browsersync": "browser-sync start --server dist --files \"dist/**/*\" --ignore \"dist/db/**/*\"",
+    "watch": "npm-run-all build build-dev -p watch:*",
+    "watch:browsersync": "browser-sync start --server dist --files \"dist/**/*\"",
     "watch:sassprefixer": "onchange \"src/sass/**/*.scss\" -- npm run build-dev",
-    "watch:copy": "onchange -e \"**/sass/**/*\" -e \"**/.gitkeep\" \"src/**/*\" -- copyfiles -a -u 1 {{changed}} dist",
-    "start": "node server.js"
+    "watch:copy": "onchange -e \"**/sass/**/*\" -e \"**/.gitkeep\" \"src/**/*\" -- copyfiles -a -u 1 {{changed}} dist"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "json-server": "^0.16.2"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "autoprefixer-cli": "^1.0.0",
+    "rimraf": "^3.0.2",
+    "autoprefixer": "^10.2.4",
     "browser-sync": "^2.26.3",
     "copyfiles": "^2.1.0",
     "eslint": "^5.14.1",
@@ -41,8 +38,10 @@
     "mkdirp": "^0.5.1",
     "node-sass": "^4.11.0",
     "npm-run-all": "^4.1.5",
-    "nu-html-checker": "^0.1.0",
+    "html-validate": "^2.8.0",
     "onchange": "^5.2.0",
+    "postcss": "^8.2.6",
+    "postcss-cli": "^8.3.1",
     "stylelint": "^9.10.1",
     "stylelint-scss": "^3.5.4"
   },
